<?xml version="1.0" encoding="utf-8"?>




<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/campo5"
        android:orientation="vertical"
        tools:context="com.example.solar.scoreapplication.MainActivity">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#c10101"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/teamA"
                    android:textColor="#FFF"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/scoreA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="0"
                    android:textColor="#FFF"
                    android:textSize="60sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#000"
                    android:onClick="addA"
                    android:tag="1"
                    android:text="@string/goals"
                    android:textColor="#FFF"
                    android:textSize="20sp" />


                <Button
                    android:id="@+id/cornerA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#803333ff"
                    android:onClick="corner"
                    android:tag="1"
                    android:text="@string/Corner"
                    android:textColor="#FFF"
                    android:textSize="20sp" />


                <Button
                    android:id="@+id/offSideA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#80ff0000"
                    android:onClick="offSide"
                    android:tag="1"
                    android:text="@string/offSide"
                    android:textColor="#FFF"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/red_teamA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="#d60404"
                        android:onClick="addRed"
                        android:padding="6dp"
                        android:tag="1"
                        android:text="0"
                        android:textColor="#FFF"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/yellow_teamA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="#fffa00"
                        android:onClick="addYellow"
                        android:padding="6dp"
                        android:tag="1"
                        android:text="0"
                        android:textColor="#000"
                        android:textSize="30sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0600c1"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/teamB"
                    android:textColor="#FFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/scoreB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="0"
                    android:textColor="#FFF"
                    android:textSize="60sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#000"
                    android:onClick="addB"
                    android:tag="1"
                    android:text="@string/goals"
                    android:textColor="#FFF"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/cornerB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#803333ff"
                    android:onClick="corner"
                    android:tag="2"
                    android:text="@string/Corner"
                    android:textColor="#FFF"
                    android:textSize="20sp" />


                <Button
                    android:id="@+id/offSideB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#80ff0000"
                    android:onClick="offSide"
                    android:tag="2"
                    android:text="@string/offSide"
                    android:textColor="#FFF"
                    android:textSize="20sp" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/red_teamB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="#d60404"
                        android:onClick="addRed"
                        android:padding="6dp"
                        android:tag="2"
                        android:text="0"
                        android:textColor="#FFF"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/yellow_teamB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="#fffa00"
                        android:onClick="addYellow"
                        android:padding="6dp"
                        android:tag="2"
                        android:text="0"
                        android:textColor="#000"
                        android:textSize="30sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="reset"
                android:text="@string/reset" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>



